--- a/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
@@ -14,6 +14,10 @@
     </div>
     <div class="account-info">
       <div>
+        Id:
+        <strong>{{ (account | async)?.id }}</strong>
+      </div>
+      <div>
         State:
         <strong>{{ currentState | async }}</strong>
       </div>
