Fix [sc-5462]: create getNerFamilyTitle and use it everywhere we need NER family name

--- a/libs/common/src/lib/entities/entities.component.scss
+++ b/libs/common/src/lib/entities/entities.component.scss
@@ -64,6 +64,7 @@ $gap-family-selection: rhythm(7);
         justify-content: space-between;
         line-height: rhythm(5);
         padding-right: rhythm(1);
+        text-transform: capitalize;
         transition: background $transition-hint;
 
         &:not(:last-of-type) {
