Replace all old rythm left by proper rhythm

--- a/apps/dashboard/src/app/activity/activity-list.component.scss
+++ b/apps/dashboard/src/app/activity/activity-list.component.scss
@@ -4,9 +4,9 @@
   display: flex;
   align-items: center;
   font-size: var(--stf-font-size-ssmall);
-  padding-bottom: rythm(0.5);
+  padding-bottom: rhythm(1);
   border-bottom: 1px solid #000;
-  margin-bottom: rythm(1);
+  margin-bottom: rhythm(1.5);
 }
 
 .activity-item {
