--- a/libs/common/src/lib/page-not-found/page-not-found.component.scss
+++ b/libs/common/src/lib/page-not-found/page-not-found.component.scss
@@ -14,7 +14,7 @@
 
   .page-not-found-content {
     background: $color-light-stronger;
-    border-radius: rythm(1);
+    border-radius: rhythm(1.5);
     display: flex;
     flex-direction: column;
     gap: rhythm(4);
