--- a/libs/common/src/lib/label/label-sets/label-set/label-set.component.scss
+++ b/libs/common/src/lib/label/label-sets/label-set/label-set.component.scss
@@ -36,7 +36,7 @@ $footer-top-margin: rhythm(2);
     }
     pa-radio {
       display: inline-block;
-      margin: rythm(1) rythm(3) 0 0;
+      margin: rhythm(1.5) rhythm(4) 0 0;
     }
 
     .warning {
