--- a/libs/common/src/lib/upload/upload-progress/upload-progress.component.scss
+++ b/libs/common/src/lib/upload/upload-progress/upload-progress.component.scss
@@ -1,11 +1,19 @@
 @import 'apps/dashboard/src/variables';
 
+$width-status: rhythm(32);
+$gap-upload-row: rhythm(1);
+
+.upload-progress-container {
+  width: rhythm(90);
+}
+
 .upload-row {
   align-items: center;
   background: $color-neutral-lightest;
   display: flex;
-  gap: rhythm(1);
+  gap: $gap-upload-row;
   height: rhythm(4);
+  justify-content: space-between;
   padding: 0 rhythm(1);
   transition: background $transition-hint;
 
@@ -17,7 +25,7 @@
 .file {
   align-items: center;
   display: flex;
-  max-width: 75%;
+  max-width: calc(100% - #{$width-status} - #{$gap-upload-row});
 }
 
 .file-name {
@@ -41,7 +49,7 @@
 }
 
 .status {
-  min-width: 25%;
+  width: $width-status;
 }
 
 .status .error {
