[sc-5464] Prevent account id to be wrapped on 2 lines

--- a/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
@@ -15,7 +15,9 @@
     <div class="account-info">
       <div>
         Id:
-        <strong>{{ (account | async)?.id }}</strong>
+        <small>
+          <strong>{{ (account | async)?.id }}</strong>
+        </small>
       </div>
       <div>
         State:
