Text change in subscriptions page

--- a/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.html
+++ b/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.html
@@ -57,7 +57,7 @@
       <th class="plan">
         <div class="plan-name">Business</div>
         <div class="price">
-          <span class="unit">{{ 'billing.enterprise_ready' | translate }}</span>
+          <span class="unit">{{ 'billing.already_available' | translate }}</span>
         </div>
         <pa-button
           *ngIf="(accountType | async) !== 'stash-business'"
