[sc-5400] Improve user feedback on upload
- Don't call `sdk.refreshCounter` while uploading files
- Display a success toast when upload is successful
- Manage status count in upload service

--- a/libs/common/src/lib/resources/resource-list/resource-list.component.html
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.html
@@ -42,7 +42,7 @@
 
     <div class="upload-container">
       <ng-container *ngIf="isMainView">
-        <stf-upload-button (uploaded)="onUpload()"></stf-upload-button>
+        <stf-upload-button></stf-upload-button>
 
         <pa-button
           *ngIf="hasSampleData | async"
