Fix [sc-5497]: Escape '.' in resource search
and don't show "empty kb – import sample dataset" when there is a query

--- a/libs/common/src/lib/resources/resource-list/resource-list.component.html
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.html
@@ -147,7 +147,7 @@
     </ng-container>
 
     <div
-      *ngIf="isMainView && emptyKb && !standalone"
+      *ngIf="isMainView && emptyKb && !query && !standalone"
       class="empty-kb">
       <p>
         <strong>{{ 'resource.empty' | translate }}</strong>
