--- a/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
+++ b/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
@@ -1,5 +1,5 @@
 <div
-  class="knowledge-box-profile"
+  class="knowledge-box-settings"
   *ngIf="kb && account">
   <div class="section">
     <h2>{{ 'stash.profile' | translate }}</h2>
