--- a/libs/search-widget/src/widgets/search-widget/SearchResults.scss
+++ b/libs/search-widget/src/widgets/search-widget/SearchResults.scss
@@ -10,10 +10,14 @@
   gap: var(--rhythm-2);
 }
 
-.results {
+.results,
+.search-results {
   display: flex;
   flex-direction: column;
   gap: var(--rhythm-2);
+}
+
+.results {
   width: 100%;
 }
 
