--- a/libs/common/src/lib/resources/resource-list/resource-list.component.html
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.html
@@ -19,10 +19,8 @@
       </label>
       <pa-select
         dim
-        formControlName="searchIn">
-        <pa-option value="title">{{ 'resource.search.in-title' | translate }}</pa-option>
-        <pa-option value="resource">{{ 'resource.search.in-resource' | translate }}</pa-option>
-      </pa-select>
+        formControlName="searchIn"
+        [options]="searchOptions"></pa-select>
       <pa-input
         id="search-resources"
         externalLabel
