Avoid duplicate rows in resource list [sc-5499]

--- a/libs/common/src/lib/resources/resource-list/processed-resource-table/processed-resource-table.component.html
+++ b/libs/common/src/lib/resources/resource-list/processed-resource-table/processed-resource-table.component.html
@@ -126,7 +126,7 @@
         </pa-table-cell>
       </pa-table-sortable-header>
 
-      <pa-table-row *ngFor="let row of data">
+      <pa-table-row *ngFor="let row of data; trackBy: trackById">
         <pa-table-cell *ngIf="isAdminOrContrib | async">
           <pa-checkbox
             [value]="selection.includes(row.resource.id)"
