--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -144,3 +144,16 @@
 
   box-sizing: border-box;
 }
+
+/* CUSTOM BRIT INSURANCE */
+
+.clause {
+  display: flex;
+  .text {
+    width: 100%;
+    textarea {
+      width: 100%;
+      height: 300px;
+    }
+  }
+}
