Add button to extend trial

--- a/apps/dashboard/src/app/account/account-status/account-status.component.scss
+++ b/apps/dashboard/src/app/account/account-status/account-status.component.scss
@@ -18,3 +18,10 @@
 .unit {
   color: $color-neutral-regular;
 }
+
+.buttons{
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: rhythm(1);
+}
