--- a/apps/dashboard/src/app/account/account-status/account-status.component.html
+++ b/apps/dashboard/src/app/account/account-status/account-status.component.html
@@ -23,10 +23,18 @@
       </ng-container>
     </div>
   </div>
-  <pa-button
-    *ngIf="isBillingEnabled | async"
-    kind="primary"
-    [routerLink]="upgradeUrl | async">
-    {{ 'billing.upgrade' | translate }}
-  </pa-button>
+  <div class="buttons">
+    <pa-button
+      *ngIf="isBillingEnabled | async"
+      kind="primary"
+      [routerLink]="upgradeUrl | async">
+      {{ 'billing.upgrade' | translate }}
+    </pa-button>
+    <pa-button
+      *ngIf="canExtendTrial | async"
+      aspect="basic"
+      (click)="contact()">
+      {{ 'account.extend_trial' | translate }}
+    </pa-button>
+  </div>
 </div>
