--- a/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.html
+++ b/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.html
@@ -186,12 +186,12 @@
       </td>
       <td>
         <div>
-          {{(prices | async)?.['stash-developer'].usage['training-hours'].threshold | number}} {{ 'hours' | translate }}
+          {{(prices | async)?.['stash-developer'].usage['training'].threshold | number}} {{ 'hours' | translate }}
         </div>
       </td>
       <td>
         <div>
-          {{(prices | async)?.['stash-business'].usage['training-hours'].threshold | number }} {{ 'hours' | translate }}
+          {{(prices | async)?.['stash-business'].usage['training'].threshold | number }} {{ 'hours' | translate }}
         </div>
       </td>
       <td>-</td>
