[sc-3915] Conversation tile

--- a/libs/search-widget/src/common/_global.scss
+++ b/libs/search-widget/src/common/_global.scss
@@ -102,6 +102,12 @@ ul.sw-dropdown-options {
   line-height: var(--line-height-title-xs);
 }
 
+.title-xxs {
+  font-size: var(--font-size-small);
+  font-weight: var(--font-weight-semi-bold);
+  line-height: var(--line-height-title-xxs);
+}
+
 .title-s {
   font-size: var(--font-size-medium);
   font-weight: var(--font-weight-semi-bold);
