--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -85,6 +85,7 @@
   --line-height-title-m: calc(var(--font-size-base) * 1.75);
   --line-height-title-s: calc(var(--font-size-base) * 1.375);
   --line-height-title-xs: calc(var(--font-size-base) * 1.375);
+  --line-height-title-xxs: calc(var(--font-size-base) * 1.375);
 
   /* TRANSITIONS */
   --transition-superfast: 0.16s ease-in-out;
