[sc-5585] Implement invoices page (#780)
* [sc-5585] Implement invoices page

* Add button to extend trial

* Add end of trial alert

* Add feature flag

--- a/apps/dashboard/src/app/account/account-status/account-status.component.html
+++ b/apps/dashboard/src/app/account/account-status/account-status.component.html
@@ -12,9 +12,9 @@
       <ng-container *ngIf="trialAccount | async">
         <div *ngIf="!(blocked | async)">
           {{
-            (daysLeft | async) >= 0
-              ? ('account.days_left' | translate: { days: (daysLeft | async) + 1 })
-              : ('account.expired' | translate)
+            (trialExpired | async)
+              ? ('account.expired' | translate)
+              : ('account.days_left' | translate: { days: (daysLeft | async) + 1 })
           }}
         </div>
         <div *ngIf="blocked | async">
@@ -23,10 +23,18 @@
       </ng-container>
     </div>
   </div>
-  <pa-button
-    *ngIf="isBillingEnabled | async"
-    kind="primary"
-    [routerLink]="upgradeUrl | async">
-    {{ 'billing.upgrade' | translate }}
-  </pa-button>
+  <div class="buttons">
+    <pa-button
+      *ngIf="isBillingEnabled | async"
+      kind="primary"
+      [routerLink]="upgradeUrl | async">
+      {{ 'billing.upgrade' | translate }}
+    </pa-button>
+    <pa-button
+      *ngIf="canExtendTrial | async"
+      aspect="basic"
+      (click)="contact()">
+      {{ 'account.extend_trial' | translate }}
+    </pa-button>
+  </div>
 </div>
