--- a/apps/dashboard/src/app/account/billing/billing.component.html
+++ b/apps/dashboard/src/app/account/billing/billing.component.html
@@ -25,6 +25,13 @@
           {{ 'billing.usage.consumption' | translate }}
         </a>
       </li>
+      <li *ngIf="(isSubscribed | async) && (areInvoicesEnabled | async)">
+        <a
+          [routerLink]="'./history'"
+          routerLinkActive="active">
+          {{ 'billing.history' | translate }}
+        </a>
+      </li>
     </ul>
     <div></div>
   </div>
