Set max-height and scrollbar on svelte dropdown

--- a/libs/search-widget/src/common/_global.scss
+++ b/libs/search-widget/src/common/_global.scss
@@ -50,6 +50,9 @@ mark.ner[family] {
 .sw-dropdown ul {
   list-style: none;
   margin: 0;
+  max-height: var(--rhythm-32);
+  overflow-x: hidden;
+  overflow-y: auto;
   padding-left: 0;
 }
 
