[sc-5567]: Allow to create own account after invitation

--- a/libs/common/src/lib/user-menu/user-menu.component.html
+++ b/libs/common/src/lib/user-menu/user-menu.component.html
@@ -9,20 +9,33 @@
     (click)="goProfile()">
     {{ 'generic.user_preferences' | translate }}
   </pa-option>
-  <pa-separator></pa-separator>
-  <pa-option
-    *ngIf="(isBillingEnabled | async) && (isAccountManager | async)"
-    icon="payment"
-    (click)="goToBilling()">
-    {{ 'account.billing' | translate }}
-  </pa-option>
-  <pa-separator></pa-separator>
-  <pa-option
-    *ngIf="accounts.length > 1"
-    icon="reload"
-    (click)="switchAccount()">
-    {{ 'generic.switch_account' | translate }}
-  </pa-option>
+  <ng-container *ngIf="(isBillingEnabled | async) && (isAccountManager | async)">
+    <pa-separator></pa-separator>
+    <pa-option
+      icon="payment"
+      (click)="goToBilling()">
+      {{ 'account.billing' | translate }}
+    </pa-option>
+  </ng-container>
+
+  <ng-container *ngIf="accounts.length > 1">
+    <pa-separator></pa-separator>
+    <pa-option
+      icon="reload"
+      (click)="switchAccount()">
+      {{ 'generic.switch_account' | translate }}
+    </pa-option>
+  </ng-container>
+
+  <ng-container *ngIf="(hasOwnAccount | async) === false">
+    <pa-separator></pa-separator>
+    <pa-option
+      icon="account"
+      (click)="createAccount()">
+      {{ 'generic.create_account' | translate }}
+    </pa-option>
+  </ng-container>
+
   <pa-separator></pa-separator>
   <pa-option
     icon="warning"
