--- a/libs/common/src/lib/user-menu/user-menu.component.html
+++ b/libs/common/src/lib/user-menu/user-menu.component.html
@@ -18,7 +18,7 @@
     </pa-option>
   </ng-container>
 
-  <ng-container *ngIf="accounts.length > 1">
+  <ng-container *ngIf="accounts.length > 1 || standalone">
     <pa-separator></pa-separator>
     <pa-option
       icon="reload"
