--- a/libs/common/src/lib/navbar/navbar.component.html
+++ b/libs/common/src/lib/navbar/navbar.component.html
@@ -135,6 +135,15 @@
             <span class="nav-link-title">{{ 'stash.side.widgets' | translate }}</span>
           </a>
         </div>
+        <div
+          class="group-items"
+          routerLink="/"
+          *ngIf="standalone">
+          <a class="nav-link">
+            <pa-icon name="knowledge-box"></pa-icon>
+            <span class="nav-link-title">{{ 'stash.create' | translate }}</span>
+          </a>
+        </div>
       </div>
       <div
         class="nav-group"
