--- a/libs/search-widget/src/tiles/viewers/ConversationViewer.scss
+++ b/libs/search-widget/src/tiles/viewers/ConversationViewer.scss
@@ -19,6 +19,10 @@
     line-height: var(--line-height-title-xxs);
   }
 
+  .highlight {
+    background-color: var(--color-primary-lightest);
+  }
+
   @media (min-width: 648px) {
     .message {
       display: flex;
