[sc-5682] Enable invoices page

--- a/apps/dashboard/src/app/account/billing/billing.component.html
+++ b/apps/dashboard/src/app/account/billing/billing.component.html
@@ -25,7 +25,7 @@
           {{ 'billing.usage.consumption' | translate }}
         </a>
       </li>
-      <li *ngIf="(isSubscribed | async) && (areInvoicesEnabled | async)">
+      <li *ngIf="isSubscribed | async">
         <a
           [routerLink]="'./history'"
           routerLinkActive="active">
