[sc-5612] Improve upload history look in sidenav

--- a/apps/desktop/src/app/main-layout/sidebar.component.html
+++ b/apps/desktop/src/app/main-layout/sidebar.component.html
@@ -56,14 +56,18 @@
 
     <div class="history-menu">
       <ul>
-        <li>
-          <span (click)="goToHistory()">{{ 'history.title' | translate }}</span>
+        <li (click)="goToHistory()">
+          {{ 'history.title' | translate }}
+          <pa-icon
+            name="chevron-right"
+            size="small"></pa-icon>
         </li>
-        <ul>
-          <li>
-            <span (click)="goToHistory(true)">{{ 'history.active' | translate }}</span>
-          </li>
-        </ul>
+        <li (click)="goToHistory(true)">
+          {{ 'history.active' | translate }}
+          <pa-icon
+            name="chevron-right"
+            size="small"></pa-icon>
+        </li>
       </ul>
     </div>
   </ng-container>
