[sc-5612] Make "sync server is up" button inverted, so it's visible

--- a/apps/desktop/src/app/main-layout/topbar.component.html
+++ b/apps/desktop/src/app/main-layout/topbar.component.html
@@ -8,20 +8,11 @@
   </div>
   <div class="status">
     <pa-button
-      *ngIf="isServerDown | async"
       size="small"
-      kind="destructive"
+      [kind]="(isServerDown | async) ? 'destructive' : 'inverted'"
       aspect="basic"
       (click)="setSyncServer()">
-      {{ 'generic.server_down' | translate }}
-    </pa-button>
-    <pa-button
-      *ngIf="(isServerDown | async) === false"
-      size="small"
-      kind="secondary"
-      aspect="basic"
-      (click)="setSyncServer()">
-      {{ 'generic.server_up' | translate }}
+      {{ ((isServerDown | async) ? 'generic.server_down' : 'generic.server_up') | translate }}
     </pa-button>
   </div>
   <div class="accounts">
